# DEIS_Project

./: camera.py  consts.py  gps.py  gps_server.py  line_tracker.py  listener.py  main.py  main2.py  main3.py  main4.py  main5.py  main7.py  main8.py  odometry.py  red_board.py  robot.py  senarios.py  send_msg.py  talker.py  testAnton.py  utils.py
gps_server/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
gps_server/scripts/: 2.py~  3.py~  abhi.py~  backupGPSClient.py  bax.py~  bottom_rid.py~  button-test.py~  button.py~  checkCurrentArmAngles.py~  ctrlc_test.py~  exa.py~  exampleGPSClient.py~  exp2.py~  experiment_2_2.py~  fileCheckTest.py~  fileCheckTest3.py~  gpsServer.py~  gpsServer2.py  green.py~  ice_cream.py~  jens-event.py~  jens-event_v2.py~  listener1.py~  listenerAll.py  my_bkgd_subtraction.py~  mylistener.py~  mytalker.py~  playAWav.py~  play_video.py~  py_ta_bax.py~  reset-to-start-pose.py~  rid.py~  rid_bax.py~  ridgeback_test.py~  save_robot_camera.py~  save_video.py~  save_video2.py~  speech_gen_test.py~  stest.py~  ta_bax.py~  (+5 more)
redbot/: redbot.ino
